--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "Gulpfile.js",
   "dependencies": {
+    "aos": "^2.3.3",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.0.0"
   },
